--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="main" data-testid="mainwrapper">
         <nav id="navbar" data-testid="navbar">
-            <a id="logo" data-testid="slackDisplayName" href="https://akintomiwa-portfoio.vercel.app">Akintomiwa</a>
+            <a id="logo" data-testid="slackDisplayName" href="https://akintomiwa-portfoio.vercel.app">Akintomiwa1️⃣</a>
             <h6 id="date" data-testid="currentTimeUTC" data-testid="currentDay"></h6>
         </nav>
         <div id="hero" data-testid="heropage">
@@ -30,7 +30,7 @@
 
                     </p>
                     <div data-testid="myslackdetails">
-                        <h5 id="display" data-testid="slackDisplayName">Slack Display Name - Akintomiwa</h5>
+                        <h5 id="display" data-testid="slackDisplayName">Slack Display Name - Akintomiwa1️⃣</h5>
                         <h5 id="display" data-testid="slackEmail">Slack Email Address - herkintormiwer@icloud.com</h5>
                     </div>
                 </div>
